プロフィールの編集（顔写真の削除および文章の修正）

--- a/index.html
+++ b/index.html
@@ -60,12 +60,17 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- profile Section Content-->
-                <div class="profile">
-                    <img src="assets/img/profile_picture.png" class="circle">
-                </div>
-                <br>
                 <div class="row">
-                    <p class="lead">平成6年生まれ、29歳エンジニアのKokiと申します。新卒でIT業界のベンチャー企業へ入社し、営業に従事。扱っていた商材がクラウドサービスであったこともあり、ITエンジニアに惹かれ、26歳の時に未経験から転職。そして、DBの保守からエンジニアとしてのキャリアをスタートしたものの、大学生の頃からフリーランスとして働きたいという気持ちがあったため、1度会社員を辞め、得意な英語を活かしてフリーランスの翻訳家に。そこからフリーランスとして1年半ほどの経験を経ることで、会社員として働くことの良さを改めて強く感じため、会社員に戻ることを決断し、エンジニアとしてキャリアを歩み直して、現在に至ります。</p>
+                    <p class="lead">現在29歳で、ITエンジニアのKokiと申します。<br>
+                                    新卒でIT業界のベンチャー企業へ入社し、営業に従事。<br>
+                                    扱っていた商材がクラウドサービスであったこともあり、<br>
+                                    ITエンジニアに惹かれて、26歳の時に未経験から転職。<br>
+                                    これまで、運用・保守として2つのプロジェクトに参画経験<br>
+                                    があり、My SQLを用いたシステムの改修（ソースコード<br>
+                                    の修正やテスト）や、マクロや専用ツールを使用して行う<br>
+                                    脆弱性関連業務（脆弱性の情報収集や検査）などを、主に<br>
+                                    担当して参りました。よろしくお願いいたします。<br>
+                                    </p>
                 </div>
             </div>
         </section>
