「連絡先」の削除

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#profile">プロフィール</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#skills">私の特長やスキル</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#works">作品</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">連絡先</a></li>
                     </ul>
                 </div>
             </div>
@@ -202,27 +201,10 @@
             </div>
         </section>
         <!-- Contact Section-->
-        <section class="page-section bg-primary text-white mb-0" id="contact">
-            <div class="container">
-                <!-- Icon Divider-->
-                <div class="divider-custom divider-light">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><h2 class="page-section-heading text-center text-white"><i class="bi bi-envelope-fill"></i> 連絡先</h2></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <!-- Contact Section Form-->
-                <div class="row justify-content-center">
-                    <div class="text-center col-lg-8 col-xl-7">
-                        <h6>もしもこちらのサイトや私に関して何かコメントがありましたら、<br>
-                            下記メールアドレス宛にご連絡頂けますと幸いです。</h6>
-                        <br>
-                        <h3 class="text-center font-weight-light mb-0"><i class="bi bi-envelope-fill"></i> wamauup.h.h.h★gmail.com</h3>
-                        <h6>※★記号を@記号に置き換えるようにお願いいたします</h6>
-                        <br><br><br>
-                    </div>
-                </div>
-            </div>
-            <h5 class="text-center font-weight-light mb-0">最後までご覧頂き、ありがとうございました！</h5>
+        <section class="page-section bg-primary text-white mb-0">
+            <br>
+            <br>
+            <h3 class="text-center font-weight-light mb-0">最後までご覧頂き、ありがとうございました！</h3>
         </section>
         
         <!-- Copyright Section-->
