「スキル」の文言の修正

--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
                     </h3>
                     <h6>※技術に関しては、実務経験が少ないため、自己学習や研修などで3カ月以上使用したことがあるものを記載しております。</h6>
                     <h5>
-                        <br>実務経験はまだまだ足りませんが、現在は、最低でも1日3時間ほど自己学習の時間を確保し、オンラインの有料講座を活用しつつ、実際に手を動かしてWebアプリの作成などに取り組んでおります。 
-                        <br>貴社で扱う技術につきましても、業務外の時間もフル活用して学び、最速でキャッチアップして参ります。
+                        <br>実務経験はまだまだ足りませんが、現在は、最低でも1日3時間ほど自己学習の時間を確保し、有料のオンライン講座（Udemy等）を活用しながら、実際に手を動かしてWebアプリの作成などに取り組んでおります。貴プロジェクトで扱う技術につきましても、業務外の時間もフル活用して学び、最速でキャッチアップして参ります。
                     </h5>
                 </div>
             </div>
